--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@near-wallet-selector/core": "^3.0.2",
+    "@near-wallet-selector/math-wallet": "^3.0.2",
+    "@near-wallet-selector/near-wallet": "^3.0.2",
+    "@near-wallet-selector/sender": "^3.0.2",
     "big.js": "^6.1.1",
     "env-cmd": "^10.1.0",
     "near-api-js": "^0.44.0",
@@ -43,7 +47,7 @@
     "regenerator-runtime": "^0.13.9"
   },
   "resolutions": {
-     "@babel/preset-env": "7.13.8"
+    "@babel/preset-env": "7.13.8"
   },
   "jest": {
     "projects": [
